--- a/ini/DMGlycemicControlTestingEnvironment.ini
+++ b/ini/DMGlycemicControlTestingEnvironment.ini
@@ -15,27 +15,8 @@ REM GUIDELINEID=JNC-VI Hypertension Guideline
 REM For Chronic Pain
 GUIDELINEID=ATHENA DM:  Glycemic Control Dashboard
 
-REM 	   DATABASE
-REM DATABASE corresponds to the name given to 
-REM the system Data Source when you open up 
-REM control Panel/ODBC Data Source
-DATABASE=
-
-REM       SERVER_LOGFILE
-REM SERVER_LOGFILE gives the directory where
-REM server logs are being stored
-SERVER_LOGFILE = 
 
 CUMULATEDOSE = TRUE
-
-REM       SERVERKB
-REM SERVERKB is the full path name for the Protege project 
-REM file containing the guideline knowledge base 
-REM Use following line for athena_hypertension
-REM SERVERKB = E:/ATHENADEMO/domain_model/athena_hypertension.pprj
-REM Use following for chronic pain??
-REM SERVERKB = E:/OpioidTestTool/domain_model/ChronicPainOpioid10-26-05.pprj
-SERVERKB = testkbs/ATHENA_GlycemicControl.pprj
 
 REM       PCAOUTPUTDIR
 REM PCAOUTPUTDIR gives the directory location for the
@@ -59,8 +40,8 @@ log4j.appender.A1.layout.ConversionPattern=%d{ISO8601} %-5p %c{1} - %m%n
 
 #log4j.logger.edu.stanford.smi.eon.criterion.IsDerivable=DEBUG
 #log4j.logger.edu.stanford.smi.eon.Dharma.Evaluate_Modify_Activity=DEBUG
-log4j.logger.edu.stanford.smi.eon.criterion.PAL_Criterion=DEBUG
-log4j.logger.edu.stanford.smi.eon.criterion.PAL_Query=DEBUG
+#log4j.logger.edu.stanford.smi.eon.criterion.PAL_Criterion=DEBUG
+#log4j.logger.edu.stanford.smi.eon.criterion.Structured_Query=DEBUG
 
 
 DX_ROOT = Medical_Domain_Class
