Added lib/plugins directory and made lib consistent with Protege installation

--- a/lib/protege.properties
+++ b/lib/protege.properties
@@ -1,5 +1,5 @@
 #Protege Properties
-#Fri Mar 11 16:48:01 PST 2016
+#Thu Aug 17 13:49:42 PDT 2017
 edu.stanford.smi.protege.server.ServerPanel.host_name=bmir-glinda.stanford.edu\:5200
 select_project_type.last_factory=edu.stanford.smi.protegex.owl.jena.JenaKnowledgeBaseFactory
 project_chooser.selected_card=Server
@@ -8,4 +8,4 @@ filechooser.last_directory=C\:\\Users\\hyunggu\\workspace\\Glinda\\kb\\old_biost
 server.last.opened.project=GLINDATaskMethod
 SwitchableClassDefinitionType=edu.stanford.smi.protegex.owl.ui.cls.LogicClassDefinitionWidgetType
 edu.stanford.smi.protege.server.ServerPanel.user_name=Hyunggu Jung
-mainframe.rectangle=235 229 1536 869
+mainframe.rectangle=246 99 1536 869
