Fixed bug: exception when drug whose dose is being changed does not have any evaluation result. Always returns a (possibly empty) list. Removed warning in WhereFilter when value is null. (When checking membership in a set, the set may be null i.e., empty).

--- a/lib/protege.properties
+++ b/lib/protege.properties
@@ -1,10 +1,10 @@
 #Protege Properties
-#Thu Aug 17 13:49:42 PDT 2017
+#Thu Aug 17 15:10:48 PDT 2017
 edu.stanford.smi.protege.server.ServerPanel.host_name=bmir-glinda.stanford.edu\:5200
 select_project_type.last_factory=edu.stanford.smi.protegex.owl.jena.JenaKnowledgeBaseFactory
-project_chooser.selected_card=Server
-history.projects.reopen=file\:/C\:/projects/eclipse/glinda/lib/examples/newspaper/newspaper.pprj,file\:/C\:/projects/eclipse/glinda/lib/examples/sqwrl/SQWRLExamples.pprj,file\:/C\:/projects/eclipse/glinda/lib/examples/pizza/pizza.owl.pprj
-filechooser.last_directory=C\:\\Users\\hyunggu\\workspace\\Glinda\\kb\\old_biostorm_kb
+project_chooser.selected_card=File
+history.projects.reopen=file\:/Users/tu/Documents/Dropbox/VA/ATHENA/athenakbs/ATHENA_HTN_Dashboard.pprj
+filechooser.last_directory=/Users/tu/Documents/Dropbox/VA/ATHENA/athenakbs
 server.last.opened.project=GLINDATaskMethod
 SwitchableClassDefinitionType=edu.stanford.smi.protegex.owl.ui.cls.LogicClassDefinitionWidgetType
 edu.stanford.smi.protege.server.ServerPanel.user_name=Hyunggu Jung
