Change adverse reaction's substance to browser text instead of KB name of substance

--- a/ini/DMGlycemicControlDashboardTestEnviron.ini
+++ b/ini/DMGlycemicControlDashboardTestEnviron.ini
@@ -25,7 +25,7 @@ REM XMLDATAFILE gives relative path of file with pre-created
 REM patients
 REM XMLDATAFILE = data/dmpatientdata_dm_PKdescrip.xml
 REM template file
-XMLDATAFILE = data/DMGlycemicContorlDashboard.xml
+XMLDATAFILE = data/dmTemplate.xml
 
 REM       SESSIONTIME
 REM added lines on 7-25-2013
