Minor changes (trim problem input, allow null start time, and lack of substitution candidate)
1. Trim white spaces from input problem strings
2. Given warning instead of throwing exception when a med does not have
a start time
3. Give warning instead of throwing exception when an Evaluate
Substitute Activity does not generate a  valid substitution candidate.

--- a/ini/HTNTestingEnvironment.ini
+++ b/ini/HTNTestingEnvironment.ini
@@ -12,7 +12,7 @@ REM the management guideline instance of interest in the
 REM knowledge base used
 REM For hypertension
 REM GUIDELINEID=JNC-VI Hypertension Guideline
-GUIDELINEID=JNC8_Dashboard
+GUIDELINEID=VA 2014 HTN Guideline Dashboard
 
 
 REM       PCAOUTPUTDIR
@@ -23,9 +23,9 @@ PCAOUTPUTDIR = output
 REM       XMLDATAFILE
 REM XMLDATAFILE gives relative path of file with pre-created 
 REM patients
-REM XMLDATAFILE = data/dmpatientdata_dm_PKdescrip.xml
+REM XMLDATAFILE = data/HTN_VAGL2014.xml
 REM template file
-XMLDATAFILE = data/DataTemplate.xml
+XMLDATAFILE = data/HTN_VAGL2014.xml
 
 REM       SESSIONTIME
 REM added lines on 7-25-2013
