--- a/lib/protege.properties
+++ b/lib/protege.properties
@@ -1,5 +1,5 @@
 #Protege Properties
-#Thu Aug 17 15:10:48 PDT 2017
+#Thu Jan 11 13:20:06 PST 2018
 edu.stanford.smi.protege.server.ServerPanel.host_name=bmir-glinda.stanford.edu\:5200
 select_project_type.last_factory=edu.stanford.smi.protegex.owl.jena.JenaKnowledgeBaseFactory
 project_chooser.selected_card=File
@@ -8,4 +8,4 @@ filechooser.last_directory=/Users/tu/Documents/Dropbox/VA/ATHENA/athenakbs
 server.last.opened.project=GLINDATaskMethod
 SwitchableClassDefinitionType=edu.stanford.smi.protegex.owl.ui.cls.LogicClassDefinitionWidgetType
 edu.stanford.smi.protege.server.ServerPanel.user_name=Hyunggu Jung
-mainframe.rectangle=246 99 1536 869
+mainframe.rectangle=1972 26 1526 1054
