The Guideline_Drug class currently has rule-in and rule-out criteria for selecting specific drugs. We can add a "condition_to_be_preferred" (AKA “Being Preferred Condition”) slot to the Guideline_Drug class. An encoder can add a criterion, which, if evaluated to “true”, will cause the specific drug being recommended to have “(preferred)” extension (i.e., the specific drug will be “drugName (preferred)”  The execution engine now supports this new slot.

--- a/lib/protege.properties
+++ b/lib/protege.properties
@@ -1,11 +1,11 @@
 #Protege Properties
-#Thu Jan 11 13:20:06 PST 2018
+#Tue Mar 20 15:28:17 PDT 2018
 edu.stanford.smi.protege.server.ServerPanel.host_name=bmir-glinda.stanford.edu\:5200
 select_project_type.last_factory=edu.stanford.smi.protegex.owl.jena.JenaKnowledgeBaseFactory
 project_chooser.selected_card=File
-history.projects.reopen=file\:/Users/tu/Documents/Dropbox/VA/ATHENA/athenakbs/ATHENA_HTN_Dashboard.pprj
+history.projects.reopen=file\:/Users/tu/Documents/Dropbox/VA/ATHENA/athenakbs/ATHENA_DM_GlycemicControl_Dashboard.pprj,file\:/Users/tu/Documents/Dropbox/VA/ATHENA/athenakbs/library.pprj,file\:/Users/tu/Documents/Dropbox/VA/ATHENA/athenakbs/ATHENA_HTN_Dashboard.pprj,file\:/Users/tu/Documents/Dropbox/VA/ATHENA/athenakbs/eon2.pprj
 filechooser.last_directory=/Users/tu/Documents/Dropbox/VA/ATHENA/athenakbs
 server.last.opened.project=GLINDATaskMethod
 SwitchableClassDefinitionType=edu.stanford.smi.protegex.owl.ui.cls.LogicClassDefinitionWidgetType
 edu.stanford.smi.protege.server.ServerPanel.user_name=Hyunggu Jung
-mainframe.rectangle=1972 26 1526 1054
+mainframe.rectangle=111 80 1526 1054
