Bug fixes related do-not-intensify/do-not-decrease dose conditions
Fixed two bugs:

1. do not decrease drug dose condition being populated with do not intensity conditions
2. do not intensify & decrease dose conditions being evaluated over all Drug Usage instances of the drug

--- a/ini/HTNTestingEnvironment.ini
+++ b/ini/HTNTestingEnvironment.ini
@@ -25,7 +25,7 @@ REM XMLDATAFILE gives relative path of file with pre-created
 REM patients
 REM XMLDATAFILE = data/HTN_VAGL2014.xml
 REM template file
-XMLDATAFILE = data/HTN_VAGL2014.xml
+XMLDATAFILE = data/HTN_VAGL2014v2.xml
 
 REM       SESSIONTIME
 REM added lines on 7-25-2013
