--- a/ini/DMGlycemicControlDashboardTestEnviron.ini
+++ b/ini/DMGlycemicControlDashboardTestEnviron.ini
@@ -24,7 +24,7 @@ REM XMLDATAFILE gives relative path of file with pre-created
 REM patients
 REM XMLDATAFILE = data/dmpatientdata_dm_PKdescrip.xml
 REM template file
-XMLDATAFILE = data/dmTemplate.xml
+XMLDATAFILE = data/dmTemplate2.xml
 
 REM       SESSIONTIME
 REM added lines on 7-25-2013
@@ -42,7 +42,7 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 # Print the date in ISO 8601 format
 log4j.appender.A1.layout.ConversionPattern=%d{ISO8601} %-5p %c{1} - %m%n
 
-#log4j.logger.edu.stanford.smi.eon.datahandler.DataHandler=DEBUG
+log4j.logger.edu.stanford.smi.eon.criterion.Variable=DEBUG
 #log4j.logger.edu.stanford.smi.eon.criterion.General_Comparison_Criterion=DEBUG
 #log4j.logger.edu.stanford.smi.eon.Dharma.Evaluate_Modify_Activity=DEBUG
 
