Updated bat/sh files for batch processing.

--- a/ini/BatchDMGlycemicControlDashboard.ini
+++ b/ini/BatchDMGlycemicControlDashboard.ini
@@ -19,7 +19,8 @@ GUIDELINEID=ATHENA DM:  Glycemic Control Dashboard
 REM       KBPATH
 REM KBPATH is the full path name for the Protege project 
 REM file containing the guideline knowledge base 
-KBPATH = /Users/tu/Documents/Dropbox/VA/ATHENA/athenakbs/ATHENA_DM_GlycemicControl_Dashboard.pprj
+REM It is no longer necessary after 2019/05/11 update
+REM KBPATH = /Users/tu/Documents/Dropbox/VA/ATHENA/athenakbs/ATHENA_DM_GlycemicControl_Dashboard.pprj
 
 REM       KBLABEL
 REM KBLABEL is the shorthand label for the Protege project 
