--- a/ini/CKDDashboardTestEnviron.ini
+++ b/ini/CKDDashboardTestEnviron.ini
@@ -12,7 +12,7 @@ REM the management guideline instance of interest in the
 REM knowledge base used
 REM For hypertension
 REM GUIDELINEID=JNC-VI Hypertension Guideline
-GUIDELINEID=ATHENA CKD dashboard
+GUIDELINEID=ATHENA CKD Guideline 2019
 
 REM       PCAOUTPUTDIR
 REM PCAOUTPUTDIR gives the directory location for the
@@ -24,7 +24,7 @@ REM XMLDATAFILE gives relative path of file with pre-created
 REM patients
 REM XMLDATAFILE = data/dmpatientdata_dm_PKdescrip.xml
 REM template file
-XMLDATAFILE = data/CKD_KDIGO.xml
+XMLDATAFILE = data/ckdTemplate.xml
 
 REM       SESSIONTIME
 REM added lines on 7-25-2013
