Implement guideline-specific lab list displayed in debugging HTML page
Made use of new lab_list slot in Management Guideline instance. Use the value of the slot if it is available to enumerate the labs in html page. Default to a built-in list if there is no guideline-specific lab list.

--- a/ini/DMGlycemicControlDashboardTestEnviron.ini
+++ b/ini/DMGlycemicControlDashboardTestEnviron.ini
@@ -50,3 +50,84 @@ DX_ROOT = Medical_Domain_Class
 DRUG_ROOT = Medications_Class
 ADR_ROOT = Medications_Class
 SIGNS_ROOT = Patient_Observations
+
+LABS = "Diabetes Testing
+    HbA1C
+    Glycosylated_Hemoglobin
+    PPG
+Blood Chemistry
+   Chem7
+      Sodium
+      Potassium
+      Chloride
+      Bicarbonate
+      BUN
+      Creatinine
+      eGFR
+      Glucose
+   Lipid Panel
+      Total_Cholesterol
+      HDL_Cholesterol
+      LDL_Cholesterol
+         Calculated_LDL
+         Direct_Measure_LDL
+      Triglycerides
+    Liver panel
+        Albumin
+        Alkaline_phosphatase
+        AST
+        ALT
+        Total_Bilirubin
+    Chemistry panel misc
+        Calcium
+        Creatine_Phosphokinase_CPK_or_CK
+        Phosphorus
+        Uric_Acid
+        B 12
+Urine chemistry
+    Creatinine_Clearance
+    Microalbumin
+CHF tests
+    BNP
+    NT_proBNP
+Hematology
+    AGN
+    CBC
+    HCT
+    HGB
+    PLT
+    WBC
+Microbiology_Tests
+    Hepatitis_B_Surface_Antigen
+    Hepatitis_C_Status
+    HIV_Test
+Pulmonary_Function_Studies
+    DCL
+    DLCO
+    FEV1
+    FVC
+respiratory gas exchange
+target_HBA1c
+Urinalysis
+    Urine_Alb/creat_Ratio_24h
+    Urine_ALB/CREAT_RATIO_spot
+    Urine_Prot/Creat_Ratio_Spot
+    UrineAlbumin_24H
+    UrineAlbumin_SPOT
+    UrineProtein_12h
+    UrineProtein_24h
+    UrineProtein_Qualitative
+    UrineProtein_Spot			
+Vital_Signs
+    Diastolic_BP
+        Treatment_Diastolic_BP
+        DB_Diastolic_BP
+    Systolic_BP
+        Treatment_Systolic_BP
+        DB_Systolic_BP
+    BMI
+    Height
+    High_Cardiovascular_Risk
+    Metabolic_Syndrome
+    Pulse
+    Weight"
